--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "api-gateway",
+  "name": "plus-metal-api-gateway",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "API Gateway for Plus Metal microservices",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
+  "keywords": ["api-gateway", "express", "microservices"],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.2.1",
-    "http-proxy-middleware": "^3.0.5"
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "http-proxy-middleware": "^2.0.6",
+    "dotenv": "^16.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
+
